# slp-diss

./: .gitignore  README.md  main.py  pyproject.toml  xtts-v2.ipynb
AccentVector/: .gitignore  ADAPTATION_PLAN.md  EXPERIMENTS.md  PROPOSAL.md  README.md  main.py
AccentVector/accent_vector/: __init__.py  data_preprocess.py  evaluate.py  extract_vector.py  infer_accent.py  lora_model.py  sample_checkpoints.py
AccentVector/accent_vector/experiments/: __init__.py  aggregate.py  common.py  grid.py  rq1_reproduction.py  rq2_geometry.py  rq3_decomposition.py  rq3_layers.py  rq5_bias.py  rq6_temporal.py  rq_temporal.py  shared.py  viz_temporal.py
AccentVector/scripts/: F5TTS_v1_LoRA_accent.yaml  eddie_finetune_lora.sh  evaluate.sh  extract_vector.sh  finetune.sh  finetune_lora.sh  infer_sweep.sh  patch_f5_tts_fork.py  presubmit_check.sh  record_provenance.sh
AccentVector/transcripts/: eval_transcripts.txt
Evaluation/: README.md  backfill_metrics.py  eval_config.py  evaluation_functions.py  requirements-eval.txt  run_eval.py  select_utterances.py  synthesis_driver.py
SOTA_models_experiments/: eval_config.py  evaluation_functions.py  evaluation_results.csv  findings.md  parler_accent_invariance.py  requirements-eval.txt  requirements-genaid.txt  run_eval.py  run_evaluation.ipynb  run_pipeline.sh  synthesis_driver.py  visualize_results.py  vits.ipynb
SOTA_models_experiments/f5-tts/: synthesise.ipynb
SOTA_models_experiments/parler-tts/: synthesise.ipynb
experiments/bark/: main.py  pyproject.toml
experiments/coqui/: pyproject.toml  synthesise.py
(+6 files in other folders)
