[project]
name = "coqui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coqui-tts>=0.27.5",
    "datasets>=4.8.5",
    "ffmpeg<8",
    "jiwer>=4.0.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "mlflow>=3.11.1",
    "numpy>=1.23.0,<2.0",
    "pesq>=0.0.4",
    "praat-parselmouth>=0.4.7",
    "resemblyzer>=0.1.4",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.1",
    "transformers<=5.0",
]
